<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_edit_profile_reset"
        android:enabled="false"
        android:icon="@drawable/ic_edit_profile_reset"
        android:orderInCategory="1"
        android:title="@string/title_action_edit_profile_reset"
        android:titleCondensed="@string/title_condensed_action_edit_profile_reset"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_edit_profile_save"
        android:icon="@drawable/ic_tick"
        android:orderInCategory="2"
        android:title="@string/title_action_edit_profile_save"
        android:titleCondensed="@string/title_condensed_action_edit_profile_save"
        app:showAsAction="always" />

</menu>