<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2019 Kaushik N. Sanji
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_main_bottom_nav_home"
        android:icon="@drawable/state_main_bottom_nav_home"
        android:orderInCategory="1"
        android:title="@string/title_main_bottom_nav_home"
        android:titleCondensed="@string/title_main_bottom_nav_home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_main_bottom_nav_photo"
        android:icon="@drawable/state_main_bottom_nav_photo"
        android:orderInCategory="2"
        android:title="@string/title_main_bottom_nav_photo"
        android:titleCondensed="@string/title_main_bottom_nav_photo"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_main_bottom_nav_profile"
        android:icon="@drawable/state_main_bottom_nav_profile"
        android:orderInCategory="3"
        android:title="@string/title_main_bottom_nav_profile"
        android:titleCondensed="@string/title_main_bottom_nav_profile"
        app:showAsAction="ifRoom" />

</menu>